--- a/Reactivity-from-scratch-7-days-demo/day2-deep-reactivity/index.html
+++ b/Reactivity-from-scratch-7-days-demo/day2-deep-reactivity/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Day 2: Deep Reactivity Demo</title>
-    <link rel="stylesheet" href="../globalCss/index.css" />
+    <link rel="stylesheet" href="../global-css/index.css" />
   </head>
   <body>
     <div class="container">
