--- a/Reactivity-from-scratch-7-days-demo/day4-computed-refs/index.html
+++ b/Reactivity-from-scratch-7-days-demo/day4-computed-refs/index.html
@@ -7,7 +7,7 @@
       content="width=device-width, initial-scale=1.0"
     />
     <title>Day 4: computed refs Demo</title>
-    <link rel="stylesheet" href="../globalCss/index.css" />
+    <link rel="stylesheet" href="../global-css/index.css" />
   </head>
   <body>
     <div class="container">
